// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-uploader/UploadInput should render correctly when inputLabel is available 1`] = `
<label
  className="inputLabelClass"
>
  yo
  <input
    multiple={true}
    onChange={[Function]}
    type="file"
  />
</label>
`;

exports[`elements/content-uploader/UploadInput should render correctly when inputLabel is not available 1`] = `""`;

exports[`elements/content-uploader/UploadInput should render correctly when isFolderUpload is true 1`] = `
<label
  className=""
>
  yo
  <input
    directory=""
    multiple={true}
    onChange={[Function]}
    type="file"
    webkitdirectory=""
  />
</label>
`;
